# cycom

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cc  rpi_touch_lcd.cpp
.devcontainer/: bashrc_custom.sh  devcontainer.json
.github/: copilot-instructions.md
.github/prompts/: review.prompt.md
config/: config.json
doc/: architecture.md  docker-setup.md  folder_structure.md  thread.md  utf8-explanation.md
docker/: .dockerignore  Dockerfile  docker-compose.yml
include/display/: display_manager.h  st7796.h  text_renderer.h
include/display/monitor/: start_monitor.h
include/display/touch/: gt911.h  touch_manager.h
include/driver/impl/: gt911.h  st7796.h
include/driver/interface/: i_display.h  i_gps.h  i_touch.h
include/gpio/: DEV_Config.h  gpio_config.h  gpio_setting.h
include/hal/: gpio_controller.h  gpio_line.h  i2c_controller.h  spi_config.h  spi_controller.h  uart_config.h
include/hal/impl/: gpio_impl.h  i2c_impl.h  spi_impl.h  uart_impl.h
include/hal/interface/: i_gpio.h  i_i2c.h  i_spi.h  i_uart.h
include/sensor/: sensor_manager.h
include/sensor/gps/: gps_l76k.h
include/sensor/uart/gps/: gps_l76k.h
include/sensors/uart/: L76X.h  gps_l76k.h  uart_config.h
include/util/: logger.h  shutdown_flag.h  time_unit.h
scripts/: build.sh  docker.sh  test.sh
src/display/: display_manager.cc  st7796.cc  text_renderer.cc
src/display/monitor/: start_monitor.cc
src/display/touch/: gt911.cc  touch_manager.cc
src/driver/impl/: gt911.cc  st7796.cc
src/gpio/: DEV_Config.cc  gpio_config.cc  gpio_setting.cc
src/hal/: gpio_config.cc  gpio_controller.cc  gpio_line.cc  i2c_controller.cc  spi_config.cc  spi_controller.cc  uart_config.cc
src/hal/gpio/: gpio_config.cc
src/hal/impl/: gpio_impl.cc  i2c_impl.cc  spi_impl.cc  uart_impl.cc
src/hal/uart/: uart_config.cc
src/sensor/: sensor_manager.cc
src/sensor/gps/: gps_l76k.cc
src/sensor/uart/: uart_config.cc
src/sensor/uart/gps/: gps_l76k.cc
src/sensors/uart/: L76X.cc  gps_l76k.cc  uart_config.cc
src/sensors/uart/gps/: gps_l76k.cc
src/util/: logger.cc  shutdown_flag.cc  time_unit.cc
tests/: CMakeLists.txt
tests/display/: text_renderer_test.cc
tests/mocks/driver/: mock_display.h
tests/mocks/hal/impl/: gpio_mock.cc  i2c_mock.cc  spi_mock.cc  uart_mock.cc
